--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@ layout: default
 <img class="personal-image pull-right" src="{{ '/assets/personal_image.jpg' | prepend: site.baseurl }}">
 
 <div class="intro-text">
-  <p>I'm a Cloud Architect for IBM in San Jose, Ca. For the past five years, I've engaged customers with various public and private Cloud technologies.  I also serve as a Master Inventor helping to drive innovation within IBM.</p>
+  <p>I'm a Cognitive Architect and Partner at Comp Three Inc. in Silicon Valley.  I help clients improve their business and products by leveraging cutting edge Cognitive and Analytic technologies.  Additionally I've been assisting IBM in building new Watson offerings.</p>
 
-  <p>Born and raised in the Silicon Valley, I have a passion for technology and its business aspects.  Prior to IBM, I led product development for mobile and analytical systems.  I have a BS and MS in Computer Science from the California Polytechnic State University where my research focused on machine learning for space systems.
-  </p>
+  <p>I previously spent five years as a Cloud Architect for IBM Cloud Labs.  I've engaged customers and built Infrastructure-as-a-Service and Platform-as-a-Service solutions.  To further contribute to the Cloud community, I presented at a number of Open Source conferences (e.g. Cloud Foundry and OpenStack).  I also served as an IBM Master inventor with 30+ patents and helped to foster IBM innovations.</p>
 
-  <p>Feel free to take a look at the rest of my site!</p>
+  <p>I received my B.S. and M.S. degrees in Computer Science from the California Polytechnic State University.  During this time my research focused on the development and launch of small CubeSats satellites.  My thesis introduces a new method for conducting autonomous satellite operations using a combination of AI techniques.</p>
+
+  <p>Born and raised in the Silicon Valley, I have a passion for technology and its business aspects.  I currently live in the South Bay with my wife and daughter.  I enjoy hiking, reading and following the stock market.  Feel free to take a look at the rest of my site!</p>
 </div>
+
