Added more travel and publications

--- a/publications.html
+++ b/publications.html
@@ -16,6 +16,9 @@ presentation_table_fields:
   truncate_length: 60
   mouseover_field: 'name'
   link_field: 'link'
+- field: 'firstLocationDate'
+  label: 'Date'
+
 
 video_table_fields:
 - field: 'name'
