--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@ layout: default
 
   <p>I received my B.S. and M.S. degrees in Computer Science from the California Polytechnic State University.  During this time my research focused on the development and launch of small CubeSats satellites.  My thesis introduces a new method for conducting autonomous satellite operations using a combination of AI techniques.</p>
 
-  <p>Born and raised in the Silicon Valley, I have a passion for technology and its business aspects.  I currently live in the South Bay with my wife and daughter.  I enjoy hiking, reading and following the stock market.  Feel free to take a look at the rest of my site!</p>
+  <p>Born and raised in the Silicon Valley, I have a passion for technology and its business aspects.  I currently live in the South Bay with my wife and kids.  I enjoy hiking, reading and following the stock market.  Feel free to take a look at the rest of my site!</p>
 </div>
 
