Added new build of flying bird

--- a/games/flapattack/index.html
+++ b/games/flapattack/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/FlyingBirdv3WebGL.loader.js";
+      var loaderUrl = buildUrl + "/FlyingBirdWebGL.loader.js";
       var config = {
-        dataUrl: buildUrl + "/FlyingBirdv3WebGL.data",
-        frameworkUrl: buildUrl + "/FlyingBirdv3WebGL.framework.js",
-        codeUrl: buildUrl + "/FlyingBirdv3WebGL.wasm",
+        dataUrl: buildUrl + "/FlyingBirdWebGL.data",
+        frameworkUrl: buildUrl + "/FlyingBirdWebGL.framework.js",
+        codeUrl: buildUrl + "/FlyingBirdWebGL.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "FlyingBird",
