--- a/games/battlecards/index.html
+++ b/games/battlecards/index.html
@@ -91,7 +91,7 @@
         </div-->
     </section>
     <footer>
-        <p>Battle Cards is an independently developed game</p>
+        <p>Battle Cards is an independently developed game.  Please see our privacy policy <a href="https://www.jasonlanderson.org/games/battlecards/privacy.html">here</a>.</p>
     </footer>
 </body>
 </html>
