Added a support URL

--- a/games/battlecards/index.html
+++ b/games/battlecards/index.html
@@ -80,7 +80,8 @@
             <img src="screenshot3.png" alt="Screenshot 3">
             <img src="screenshot4.png" alt="Screenshot 4">
         </div>
-        <p>Coming soon to Apple and Google Play App Stores</p>
+        <p>Coming soon to Apple and Google Play App Stores.</p>
+        <p>If you have any questions, please email <a href="mailto:battlecardsgameinfo@gmail.com">battlecardsgameinfo@gmail.com</a></p>
         <!--div class="download-buttons">
             <a href="https://itunes.apple.com/us/app/battle-cards/id1234567890?mt=8">
                 <img src="path/to/appstore.png" alt="Download on the App Store">
