--- a/games/battlecards/index.html
+++ b/games/battlecards/index.html
@@ -22,10 +22,6 @@
             align-items: center;
             padding: 20px;
         }
-        img {
-            max-width: 100%;
-            height: auto;
-        }
         h2 {
             font-size: 1.5em;
             margin-top: 20px;
@@ -61,7 +57,7 @@
             text-align: center;
             font-size: 0.8em;
         }
-        img {
+        .screenshot-image {
             display: inline-block;
             max-width: 100%;
             height: auto;
@@ -74,13 +70,20 @@
     <header>Battle Cards</header>
     <section>
         <p>Battle Cards is fun, simple-to-learn, single-player, mobile card game where two elementals battle each other for dominance. Play uniquely designed cards against an AI opponent.</p>
-        <div style="display: flex; flex-direction: row; padding: 20px; flex-wrap: wrap">
-            <img src="screenshot1.png" alt="Screenshot 1">
-            <img src="screenshot2.png" alt="Screenshot 2">
-            <img src="screenshot3.png" alt="Screenshot 3">
-            <img src="screenshot4.png" alt="Screenshot 4">
+        <div style="display: flex; flex-direction: row; padding: 20px; flex-wrap: wrap;">
+            <img src="screenshot1.png" alt="Screenshot 1" class="screenshot-image">
+            <img src="screenshot2.png" alt="Screenshot 2" class="screenshot-image">
+            <img src="screenshot3.png" alt="Screenshot 3" class="screenshot-image">
+            <img src="screenshot4.png" alt="Screenshot 4" class="screenshot-image">
         </div>
-        <p>Coming soon to Apple and Google Play App Stores.</p>
+        <div style="display: flex; flex-direction: row; padding: 20; flex-wrap: wrap;">
+            <a href="https://apps.apple.com/us/app/battle-cards-game/id6446061306" style="margin: 10px;">
+                <img src="ios-blk-092917.svg" alt="Available on the App Store" height="75px" />
+            </a>
+            <a href="https://play.google.com/store/apps/details?id=com.andersonljason.battlecards" style="margin: 10px;">
+                <img src="googleplaybadge.png" alt="Available on the Google Play Store" height="75px" />
+            </a>
+        </div>
         <p>If you have any questions, please email <a href="mailto:battlecardsgameinfo@gmail.com">battlecardsgameinfo@gmail.com</a></p>
         <!--div class="download-buttons">
             <a href="https://itunes.apple.com/us/app/battle-cards/id1234567890?mt=8">
